[gd_scene load_steps=17 format=3 uid="uid://d1kbmfvjs6nrv"]

[ext_resource type="Script" path="res://planets/landing/landing.gd" id="1_h6plc"]
[ext_resource type="Texture2D" uid="uid://bj326fr2sh34k" path="res://planets/landing/images/e44babbc-77e8-45dc-912f-a73b967e9724.jpg" id="1_pqg2x"]
[ext_resource type="Resource" uid="uid://cllvivdb0vf3t" path="res://planets/resources/mars.tres" id="2_enlpl"]
[ext_resource type="Script" path="res://addons/markdownlabel/markdownlabel.gd" id="2_yg35i"]
[ext_resource type="Script" path="res://addons/markdownlabel/header_formats/h1_format.gd" id="3_qyo7t"]
[ext_resource type="Script" path="res://addons/markdownlabel/header_formats/h2_format.gd" id="4_pkq2t"]
[ext_resource type="Script" path="res://addons/markdownlabel/header_formats/h3_format.gd" id="5_qic03"]
[ext_resource type="Script" path="res://addons/markdownlabel/header_formats/h4_format.gd" id="6_arb8h"]
[ext_resource type="Script" path="res://addons/markdownlabel/header_formats/h5_format.gd" id="7_i6mci"]
[ext_resource type="Script" path="res://addons/markdownlabel/header_formats/h6_format.gd" id="8_8ji3a"]

[sub_resource type="Resource" id="Resource_tb1un"]
resource_local_to_scene = true
script = ExtResource("3_qyo7t")
font_size = 2.285
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[sub_resource type="Resource" id="Resource_15wrs"]
resource_local_to_scene = true
script = ExtResource("4_pkq2t")
font_size = 1.714
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[sub_resource type="Resource" id="Resource_vnt4x"]
resource_local_to_scene = true
script = ExtResource("5_qic03")
font_size = 1.428
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[sub_resource type="Resource" id="Resource_8k4n7"]
resource_local_to_scene = true
script = ExtResource("6_arb8h")
font_size = 1.142
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[sub_resource type="Resource" id="Resource_cbud8"]
resource_local_to_scene = true
script = ExtResource("7_i6mci")
font_size = 1.0
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[sub_resource type="Resource" id="Resource_3w4qr"]
resource_local_to_scene = true
script = ExtResource("8_8ji3a")
font_size = 0.857
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[node name="Landing" type="Window" node_paths=PackedStringArray("bar_button", "trading_button", "missions_button", "outfitter_button", "shipyard_button", "refuel_button")]
title = "Mars"
initial_position = 2
size = Vector2i(900, 600)
script = ExtResource("1_h6plc")
planet = ExtResource("2_enlpl")
bar_button = NodePath("PanelContainer/VBoxContainer/HFlowContainer/BarButton")
trading_button = NodePath("PanelContainer/VBoxContainer/HFlowContainer/TradingButton")
missions_button = NodePath("PanelContainer/VBoxContainer/HFlowContainer/MissionsButton")
outfitter_button = NodePath("PanelContainer/VBoxContainer/HFlowContainer/OutfitterButton")
shipyard_button = NodePath("PanelContainer/VBoxContainer/HFlowContainer/ShipyardButton")
refuel_button = NodePath("PanelContainer/VBoxContainer/HFlowContainer/RefuelButton")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="TextureRect" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_pqg2x")
expand_mode = 2
stretch_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarkdownLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
bbcode_enabled = true
text = "As your ship descends through the atmosphere, a vast desert terrain unfolds before you. Towering red cliffs rise sharply from the barren plains, their jagged peaks reaching toward the sky. The ground is a mix of rusty red sand and scattered boulders, suggesting a harsh and unforgiving environment.

In the distance, a massive planet looms on the horizon, dominating the alien sky. Its surface is marred by craters and swirling clouds, hinting at tumultuous conditions. A smaller celestial body - perhaps a moon - hangs nearby, adding to the otherworldly feel of this system.

The sky itself is a tapestry of warm hues - golds, oranges, and soft pinks - as if the system's star is in a perpetual state of setting. Wispy clouds streak across the upper atmosphere, catching the light and creating a dramatic backdrop for the celestial bodies.

This harsh yet beautiful landscape presents both danger and opportunity. As a merc, you'll need to tread carefully in this alien world, but the potential for discovery and profit is immense. What secrets might be hidden among those towering cliffs or buried beneath the rusty sands?"
script = ExtResource("2_yg35i")
markdown_text = "As your ship descends through the atmosphere, a vast desert terrain unfolds before you. Towering red cliffs rise sharply from the barren plains, their jagged peaks reaching toward the sky. The ground is a mix of rusty red sand and scattered boulders, suggesting a harsh and unforgiving environment.

In the distance, a massive planet looms on the horizon, dominating the alien sky. Its surface is marred by craters and swirling clouds, hinting at tumultuous conditions. A smaller celestial body - perhaps a moon - hangs nearby, adding to the otherworldly feel of this system.

The sky itself is a tapestry of warm hues - golds, oranges, and soft pinks - as if the system's star is in a perpetual state of setting. Wispy clouds streak across the upper atmosphere, catching the light and creating a dramatic backdrop for the celestial bodies.

This harsh yet beautiful landscape presents both danger and opportunity. As a merc, you'll need to tread carefully in this alien world, but the potential for discovery and profit is immense. What secrets might be hidden among those towering cliffs or buried beneath the rusty sands?"
h1 = SubResource("Resource_tb1un")
h2 = SubResource("Resource_15wrs")
h3 = SubResource("Resource_vnt4x")
h4 = SubResource("Resource_8k4n7")
h5 = SubResource("Resource_cbud8")
h6 = SubResource("Resource_3w4qr")

[node name="HFlowContainer" type="HFlowContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="BarButton" type="Button" parent="PanelContainer/VBoxContainer/HFlowContainer"]
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 0
text = "Spaceport Bar"

[node name="TradingButton" type="Button" parent="PanelContainer/VBoxContainer/HFlowContainer"]
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 0
text = "Trade Computer"

[node name="MissionsButton" type="Button" parent="PanelContainer/VBoxContainer/HFlowContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "Mission Computer"

[node name="OutfitterButton" type="Button" parent="PanelContainer/VBoxContainer/HFlowContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "Outfitter"

[node name="ShipyardButton" type="Button" parent="PanelContainer/VBoxContainer/HFlowContainer"]
visible = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "Shipyard"

[node name="RefuelButton" type="Button" parent="PanelContainer/VBoxContainer/HFlowContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
disabled = true
text = "Refuel"

[node name="DepartButton" type="Button" parent="PanelContainer/VBoxContainer/HFlowContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "Depart"

[connection signal="close_requested" from="." to="." method="_on_depart"]
[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HFlowContainer/BarButton" to="." method="_on_bar_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HFlowContainer/TradingButton" to="." method="_on_trading_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HFlowContainer/MissionsButton" to="." method="_on_missions_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HFlowContainer/OutfitterButton" to="." method="_on_outfitter_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HFlowContainer/ShipyardButton" to="." method="_on_shipyard_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HFlowContainer/RefuelButton" to="." method="_on_refuel_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HFlowContainer/DepartButton" to="." method="_on_depart"]
